🚀 2단계 - QueryBuilder DDL (#173)
* docs: step1 요구사항 작성

* refactor: JDK 11에서 실행되도록 수정

* refactor: try~catch 별도로 메소드로 빼기

* refactor: try~catch 메소드에서 사용하지 않도록 수정하기

* refactor: 중첩 클래스로 요구사항1 조건 감싸기

* refactor: System.out.println 출력 값도 테스트

* refactor: getField 로 값 확인하기

* docs: 2단계 요구사항 작성하기

* feat: database 마다 쿼리문 변경 가능하도록 설계

* feat: Dialect 설정하는 인터페이스 설정

* feat: Dialect 설정하는 인터페이스 설정

* feat: entity 설정하는 도메인 추가

* feat: Create Table 및 Column 빌드 추가

* feat: Dialect Database 찾아 실행하는 기능 추가

* test: 요구사항1 테스트코드 추가

* feat: 요구사항 1 만족하는 enitty 추가

* docs: 요구사항1 체크

* feat: @Column 값으로 ddl 판단조건 추가

* test: 테스트 코드 추가

* docs: @Column 요구사항 완료

* feat: @Table 이 있는 속성 추가 및 @Transient은 컬럼에 추가되지 않게 수정

* test: 테스트 코드 추가

* docs: 요구사항3 완료

* feat: DropTable하는 빌더 기능추가

* test: DropQuery 쿼리문 반환하는 테스트 코드 추가

* feat: DropTable 구현체 생성

* docs: 요구사항 체크 완료

* fix: 의미있는 이름으로 변경

* fix: abstract 에서 interface로 수정

* fix: Supplier 적용하기

* fix: Supplier 반환으로 수정

* test: 테스트 코드 수정

* feat: DB 요청전에 예외 시키는 기능 추가

* feat: 디비별 제약조건 Mapper 추가

* feat: class에서 DataType으로 변환 실패시 에러를 반환하도록 수정

* fix: Dialect는 DB별 환경만 맞추도록 수정

* fix: 디비별 제약조건을 받도록 수정

* fix: 쿼리를 만드는 부분에서 Trasient을 체크하는 역할 추가

* fix: 제약조건 저장하는 이름으로 Constrains가 더 부합하여 수정

* fix: 도메인타입에서 어노에테이션을 체크하는 로직 추가

* fix: 일급 콜렉션에서 반환시, 불변성을 가진 리스트를 반환하도록 설정

* fix: interface를 매개변수롤 받도록 수정

* feat: custom Exception 추가

* fix: 변환된 클래스 실제로 사용하는 로직 수정

* test: h2 type변환 테스트코드 작성

* test: @BeforeAll를 사용하여, 한번만 H2가 실행되도록 수정

* refactor: 사용하지 않은 테스트 코드 제거

* refactor: 사용하지 않은 테스트 코드 제거

* refactor: 사용하지 않는 코드 제거

* test: 새로 설정된 코드에서 돌아가도록 수정

* test: h2에서 사용하는 타입 체크하는 로직 테스트 코드 작성

* refactor: EOL 줄개행 수정